# HappyDogShop

./: .gitignore  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_remove_product_manufactured_at.py
catalog/templates/catalog/: base.html  contact.html  home.html  product_info.html
catalog/templates/catalog/includes/: inc_main_menu.html
catalog/templatetags/: templatetags.py
config/: settings.py  urls.py
data/: catalog_data.json
