[tool.poetry]
name = "eth-shop"
version = "0.1.0"
description = "Проект интернет-магазина для портфолио"
authors = ["Антон Федяев <fearthe54@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
ipython = "^8.22.2"
psycopg2 = "^2.9.9"
psycopg = "^3.1.18"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
